fix scrolling on mobile

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,6 @@
 /***** nav-bar *****/
-body {
+body,
+html {
   overflow-x: hidden;
 }
 .nav-bar {
